// protoc --gofast_out=.  task.proto
syntax = "proto3";

package task;

message List {
	repeated fixed64 uids = 1;
}

message Value {
	bytes val = 1;
	uint32 valType = 2;
}

message Query {
	string attr = 1;
	int32 count = 2;       // Get this many elements.
	int32 offset = 3;      // Skip this many elements.
	fixed64 afterUid = 4;  // Only return UIDs greater than this.
	bool doCount = 5;    // Are we just getting lengths?

	// Exactly one of uids and terms is populated.
	repeated fixed64 uids = 6;
	repeated string tokens = 7;

	// Intersect results with this UID list. If uids is populated, then this is
	// an "intersection query". If terms is populated, this is a "filter query".
	repeated fixed64 toIntersect = 8;
}

message Result {
	repeated List uidMatrix = 1;
	repeated Value values = 2;
	repeated uint32 counts = 3;
}

message Sort {
	string attr = 1;
	repeated List uidMatrix = 2;
	int32 count = 3;   // Return this many elements.
	int32 offset = 4;  // Skip this many elements.
}

message SortResult {
	repeated List uidMatrix = 1;
}

message Num {
	uint32 group = 1;
	int64 val = 2;
	repeated uint64 uids = 3;
}

message RaftContext {
	fixed64 id = 1;
	uint32 group = 2;
	string addr = 3;
}

// Membership stores information about RAFT group membership for a single RAFT node.
// Note that each server can be serving multiple RAFT groups. Each group would have
// one RAFT node per server serving that group.
message Membership {
	fixed64 id = 1;
	uint32 group = 2;
	string addr = 3;
	bool leader = 4;
	bool amDead = 5;
	uint64 lastUpdate = 6;
}

// MembershipUpdate is used to pack together the current membership state of all the nodes
// in the caller server; and the membership updates recorded by the callee server since
// the provided lastUpdate.
message MembershipUpdate {
	repeated Membership members = 1;
	uint64 lastUpdate = 2;
	
	bool redirect = 3;
	string redirectAddr = 4;
}
